--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,7 +1,7 @@
 /* Colors */
 $bgcolor-body: #f5f5f2;
 $bgcolor-section: #ffffff;
-$bgcolor-sidebar: #191919;
+$bgcolor-navbar: #191919;
 $brand-main-color: #979797;
 $primary: #E3E3E3;
 $secondary: #bababa;
@@ -9,12 +9,12 @@ $links: #56819F;
 $links-hover: #FFA200;
 $btn-primary: #F58220;
 $btn-text:#f4f4f4;
-$border: #E6E6E6;
+$border: #2c2c2c;
 
 /* Font sizes */
 $small-font-size: 14px;
 $medium-font-size: 16px;
-$large-font-size: 20px;
+$large-font-size: 24px;
 
 /* Fonts */
 $brand-font: 'Roboto',
