Change grid and add styles for sections

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -7,9 +7,10 @@ $primary: #E3E3E3;
 $secondary: #bababa;
 $links: #56819F;
 $links-hover: #FFA200;
+$table-hover: #f1f3f3;
 $btn-primary: #F58220;
 $btn-text:#f4f4f4;
-$border: #2c2c2c;
+$border: $primary;
 
 /* Font sizes */
 $small-font-size: 14px;
