--- a/sass/sections/_navbar.scss
+++ b/sass/sections/_navbar.scss
@@ -18,7 +18,7 @@
 
 
     .team-manager {
-        border-top: 1px solid $border;
+        border-top: 1px solid $secondary;
 
         h2 {
             font-size: $small-font-size;
