--- a/sass/style.css
+++ b/sass/style.css
@@ -405,7 +405,8 @@ template {
   font-size: 18px;
   font-weight: 300;
   border: none;
-  cursor: pointer; }
+  cursor: pointer;
+  margin-top: 30px; }
 
 .btn-primary {
   background-color: #F58220; }
@@ -425,7 +426,7 @@ template {
   width: 127px;
   height: 40px; }
 
-img {
+img:not(.graph) {
   width: 14px;
   height: 13px;
   margin: 0px 10px; }
@@ -437,13 +438,32 @@ img {
   list-style-type: none;
   padding: 10px; }
 
+.list-group-horizontal .list-group-item {
+  border-left: 1px solid #E3E3E3; }
+
 a {
   text-decoration: none;
   font-size: 14px;
   color: #979797;
   line-height: 42px;
   margin-left: 15px;
-  padding: 10px; }
+  padding: 10px 0px; }
+
+.table {
+  background-color: transparent;
+  margin: 24px 0px;
+  width: 100%; }
+  .table td {
+    font-size: 16px;
+    font-family: "Roboto", sans-serif;
+    color: #979797;
+    border-bottom: 1px solid #E3E3E3;
+    line-height: 17px;
+    padding: 5px 50px 5px 10px; }
+    .table td:hover {
+      background-color: #f1f3f3; }
+  .table a {
+    color: #56819F; }
 
 .navbar {
   position: fixed;
@@ -455,19 +475,19 @@ a {
     font-size: 24px;
     font-family: 'Dancing Script', cursive;
     margin-left: 15px;
-    padding: 10px; }
+    padding: 10px 0px; }
   .navbar .navbar-menu {
     color: #979797;
     float: right; }
   .navbar .team-manager {
-    border-top: 1px solid #2c2c2c; }
+    border-top: 1px solid #bababa; }
     .navbar .team-manager h2 {
       font-size: 14px;
       color: #979797;
       text-transform: uppercase;
       letter-spacing: -0.28px;
       margin-left: 15px;
-      padding: 10px; }
+      padding: 10px 0px; }
     .navbar .team-manager .manager {
       font-size: 14px;
       color: #56819F; }
@@ -480,23 +500,37 @@ a {
 
 .topbar {
   background-color: #ffffff;
-  border: 1px solid #2c2c2c; }
+  border: 1px solid #E3E3E3; }
   .topbar .list-group-item {
     display: inline-block; }
 
 .general-statistic {
-  border: 1px solid #2c2c2c;
+  border: 1px solid #E3E3E3;
   background-color: #ffffff;
   box-shadow: 2px 2px 2px #979797;
-  margin: 22px;
-  padding: 10px; }
+  margin: 20px;
+  padding: 20px; }
+
+.calendar p {
+  display: inline-block;
+  border: 1px solid #E3E3E3;
+  padding: 10px 30px 10px 10px; }
+
+.graph-chart {
+  padding: 20px 0px; }
+  .graph-chart .graph-title {
+    font-size: 16px;
+    color: #979797; }
+  .graph-chart .graph {
+    margin-top: 30px;
+    width: 100%; }
 
 .links {
-  border: 1px solid #2c2c2c;
+  border: 1px solid #E3E3E3;
   background-color: #ffffff;
   box-shadow: 2px 2px 2px #979797;
-  margin: 22px;
-  padding: 10px; }
+  margin: 20px;
+  padding: 20px; }
 
 body {
   font-family: "Roboto", sans-serif;
@@ -504,5 +538,14 @@ body {
 
 a:hover {
   color: #FFA200; }
+
+.section-header {
+  border-bottom: 1px solid #E3E3E3; }
+  .section-header .section-title {
+    text-transform: uppercase;
+    color: #979797;
+    line-height: 42px;
+    font-size: 14px;
+    font-weight: bold; }
 
 /*# sourceMappingURL=style.css.map */
