Change styles for navbar and add new styles for section links

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -8,6 +8,7 @@ $secondary: #bababa;
 $links: #56819F;
 $links-hover: #FFA200;
 $table-hover: #f1f3f3;
+$list-hover: #282828;
 $btn-primary: #F58220;
 $btn-text:#f4f4f4;
 $border: $primary;
@@ -15,7 +16,7 @@ $border: $primary;
 /* Font sizes */
 $small-font-size: 14px;
 $medium-font-size: 16px;
-$large-font-size: 24px;
+$large-font-size: 30px;
 
 /* Fonts */
 $brand-font: 'Roboto',
