--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -1,12 +1,13 @@
 @mixin margin {
-    margin-left: 15px;
+    margin-left: 34px;
     padding: 10px 0px;
 }
+
 
 @mixin section_style {
     border: 1px solid $border;
     background-color: $bgcolor-section;
     box-shadow: 2px 2px 2px $brand-main-color;
-    margin: 20px;
+    margin: 60px 20px;
     padding: 20px;
 }
