--- a/sass/components/_tables.scss
+++ b/sass/components/_tables.scss
@@ -1,23 +1,39 @@
 .table {
-    background-color: transparent;
-    margin: 24px 0px;
-    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-top: 15px;
 
-    td {
-        font-size: $medium-font-size;
-        font-family: $brand-font;
-        color: $brand-main-color;
-        border-bottom: 1px solid $border;
-        line-height: 17px;
-        padding: 5px 50px 5px 10px;
+    .table-row {
+        display: flex;
+        width: 100%;
 
         &:hover {
             background-color: $table-hover;
+
+            .icon-table-hover {
+                display: inline-block;
+            }
         }
     }
 
-    a {
+    .table-item {
+        justify-content: space-around;
+        flex-grow: 0;
+        flex-shrink: 1;
+        flex-basis: 100%;
+        width: 100%;
+        box-sizing: border-box;
+        border-bottom: 1px solid $border;
+        padding: 10px;
+        font-size: $medium-font-size;
+        font-family: $brand-font;
+        color: $brand-main-color;
+        line-height: 30px;
+    }
 
+    a {
         color: $links;
     }
 }
