--- a/sass/style.css
+++ b/sass/style.css
@@ -426,13 +426,13 @@ template {
   width: 127px;
   height: 40px; }
 
-img:not(.graph) {
-  width: 14px;
-  height: 13px;
+.icon {
+  width: 16px;
+  height: 14px;
   margin: 0px 10px; }
 
-.navbar img:not(.photo) {
-  filter: invert(60%); }
+.icon-table-hover {
+  display: none; }
 
 .list-group-item {
   list-style-type: none;
@@ -441,44 +441,64 @@ img:not(.graph) {
 .list-group-horizontal .list-group-item {
   border-left: 1px solid #E3E3E3; }
 
-a {
-  text-decoration: none;
-  font-size: 14px;
-  color: #979797;
-  line-height: 42px;
-  margin-left: 15px;
-  padding: 10px 0px; }
+.list-hover:hover {
+  background-color: #282828;
+  border-left: 3px solid #FFA200;
+  cursor: pointer; }
+  .list-hover:hover a {
+    color: #FFA200; }
 
 .table {
-  background-color: transparent;
-  margin: 24px 0px;
-  width: 100%; }
-  .table td {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin-top: 15px; }
+  .table .table-row {
+    display: flex;
+    width: 100%; }
+    .table .table-row:hover {
+      background-color: #f1f3f3; }
+      .table .table-row:hover .icon-table-hover {
+        display: inline-block; }
+  .table .table-item {
+    justify-content: space-around;
+    flex-grow: 0;
+    flex-shrink: 1;
+    flex-basis: 100%;
+    width: 100%;
+    box-sizing: border-box;
+    border-bottom: 1px solid #E3E3E3;
+    padding: 10px;
     font-size: 16px;
     font-family: "Roboto", sans-serif;
     color: #979797;
-    border-bottom: 1px solid #E3E3E3;
-    line-height: 17px;
-    padding: 5px 50px 5px 10px; }
-    .table td:hover {
-      background-color: #f1f3f3; }
+    line-height: 30px; }
   .table a {
     color: #56819F; }
 
 .navbar {
   position: fixed;
+  top: 0;
+  left: 0;
   background-color: #191919;
   height: 100vh;
   float: left; }
   .navbar h3 {
     color: #ffffff;
-    font-size: 24px;
+    font-size: 30px;
     font-family: 'Dancing Script', cursive;
-    margin-left: 15px;
+    line-height: 50px;
+    margin-left: 34px;
     padding: 10px 0px; }
   .navbar .navbar-menu {
-    color: #979797;
-    float: right; }
+    position: absolute;
+    top: 0px;
+    right: 30px;
+    font-size: 30px;
+    line-height: 50px; }
+  .navbar .icon {
+    filter: invert(60%); }
   .navbar .team-manager {
     border-top: 1px solid #bababa; }
     .navbar .team-manager h2 {
@@ -486,19 +506,27 @@ a {
       color: #979797;
       text-transform: uppercase;
       letter-spacing: -0.28px;
-      margin-left: 15px;
+      margin-top: 10px;
+      margin-left: 34px;
       padding: 10px 0px; }
     .navbar .team-manager .manager {
+      position: relative;
       font-size: 14px;
-      color: #56819F; }
-      .navbar .team-manager .manager img {
+      color: #56819F;
+      margin-left: 34px;
+      padding: 10px 0px; }
+      .navbar .team-manager .manager .photo {
         width: 43px;
         height: 43px;
         border-radius: 50%; }
       .navbar .team-manager .manager p {
-        display: inline-block; }
+        display: inline-block;
+        position: absolute;
+        top: 25px;
+        left: 50px; }
 
 .topbar {
+  position: fixed;
   background-color: #ffffff;
   border: 1px solid #E3E3E3; }
   .topbar .list-group-item {
@@ -508,7 +536,7 @@ a {
   border: 1px solid #E3E3E3;
   background-color: #ffffff;
   box-shadow: 2px 2px 2px #979797;
-  margin: 20px;
+  margin: 60px 20px;
   padding: 20px; }
 
 .calendar p {
@@ -529,15 +557,22 @@ a {
   border: 1px solid #E3E3E3;
   background-color: #ffffff;
   box-shadow: 2px 2px 2px #979797;
-  margin: 20px;
+  margin: 60px 20px;
   padding: 20px; }
 
 body {
   font-family: "Roboto", sans-serif;
   background-color: #f5f5f2; }
 
-a:hover {
-  color: #FFA200; }
+a {
+  text-decoration: none;
+  font-size: 14px;
+  color: #979797;
+  line-height: 30px;
+  margin-left: 15px;
+  padding: 10px 0px; }
+  a:hover {
+    color: #FFA200; }
 
 .section-header {
   border-bottom: 1px solid #E3E3E3; }
