--- a/sass/style.scss
+++ b/sass/style.scss
@@ -40,3 +40,14 @@ a {
         font-weight: bold;
     }
 }
+
+.scroll-wrapper {
+    display: block;
+    width: 100%;
+    overflow-x: auto;
+}
+
+.scroll-wrapper .table {
+    width: 100%;
+    max-width: 100%;
+}
