--- a/css/style.css
+++ b/css/style.css
@@ -525,6 +525,12 @@ template {
         top: 25px;
         left: 50px; }
 
+@media (max-width: 768px) {
+  .navbar {
+    left: -150px; }
+
+  .navbar-menu {
+    left: 150px; } }
 .topbar {
   position: fixed;
   background-color: #ffffff;
@@ -551,7 +557,8 @@ template {
     color: #979797; }
   .graph-chart .graph {
     margin-top: 30px;
-    width: 100%; }
+    width: auto;
+    min-width: 100%; }
 
 .links {
   border: 1px solid #E3E3E3;
@@ -582,5 +589,14 @@ a {
     line-height: 42px;
     font-size: 14px;
     font-weight: bold; }
+
+.scroll-wrapper {
+  display: block;
+  width: 100%;
+  overflow-x: auto; }
+
+.scroll-wrapper .table {
+  width: 100%;
+  max-width: 100%; }
 
 /*# sourceMappingURL=style.css.map */
