--- a/sass/style.scss
+++ b/sass/style.scss
@@ -21,7 +21,7 @@ a {
     font-size: $small-font-size;
     color: $brand-main-color;
     line-height: 30px;
-    margin-left: 15px;
+    // margin-left: 15px;
     padding: 10px 0px;
 
     &:hover {
