--- a/sass/sections/_navbar.scss
+++ b/sass/sections/_navbar.scss
@@ -2,6 +2,7 @@
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 1;
     background-color: $bgcolor-navbar;
     height: 100vh;
     float: left;
