--- a/sass/sections/_topbar.scss
+++ b/sass/sections/_topbar.scss
@@ -2,6 +2,7 @@
     position: fixed;
     background-color: $bgcolor-section;
     border: 1px solid $border;
+    z-index: 0;
 
     .list-group-item {
         display: inline-block;
