--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -7,8 +7,8 @@
     border: 1px solid $border;
     background-color: $bgcolor-section;
     box-shadow: 2px 2px 2px $brand-main-color;
-    margin: 60px 20px;
-    padding: 20px;
+    margin: 60px 10px 10px 10px;
+    padding: 15px;
 }
 
 @mixin grid($prefix) {
