--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -7,16 +7,20 @@
     border: 1px solid $border;
     background-color: $bgcolor-section;
     box-shadow: 2px 2px 2px $brand-main-color;
-    margin: 60px 10px 10px 10px;
+    margin: 50px 10px;
     padding: 15px;
 }
 
 @mixin grid($prefix) {
     @for $i from 1 through 12 {
+        $width: 100% / 12 * $i;
+
         .col-#{$prefix}-#{$i} {
-            $width: 100% / 12 * $i;
-            flex: 0 0 $width;
-            max-width: $width;
+            width: $width;
+        }
+
+        .col-offset-#{$prefix}-#{$i} {
+            margin-left: $width;
         }
     }
 }
