--- a/sass/sections/_navbar.scss
+++ b/sass/sections/_navbar.scss
@@ -6,6 +6,11 @@
     background-color: $bgcolor-navbar;
     height: 100vh;
     float: left;
+    transition: all .3s ease-in-out;
+
+    &.hide {
+        left: -150px;
+    }
 
     h3 {
         color: #ffffff;
@@ -17,11 +22,13 @@
     }
 
     .navbar-menu {
-        position: absolute;
-        top: 0px;
-        right: 30px;
-        font-size: $large-font-size;
-        line-height: 50px;
+        i {
+            position: absolute;
+            top: 10px;
+            right: 20px;
+            font-size: $large-font-size;
+            line-height: 50px;
+        }
     }
 
     .icon {
@@ -62,12 +69,19 @@
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
     .navbar {
+        height: 100vh;
         left: -150px;
     }
 
-    .navbar-menu {
-        left: 200px;
+    &.hide {
+        left: 150px;
+    }
+
+    .navbar-menu i {
+        position: absolute;
+        top: 0px;
+        right: 0px;
     }
 }
