--- a/css/style.css
+++ b/css/style.css
@@ -363,6 +363,7 @@ template {
   width: 100%;
   padding-left: 15px;
   padding-right: 15px;
+  text-align: center;
 }
 
 .row::before,
@@ -809,12 +810,6 @@ template {
 }
 
 @media (max-width: 767px) {
-  .table-row {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
   .table-item {
     text-align: center;
   }
@@ -841,14 +836,13 @@ template {
   font-size: 30px;
   font-family: 'Dancing Script', cursive;
   line-height: 50px;
-  margin-left: 10px;
   padding: 10px 0px;
 }
 
 .navbar .navbar-menu i {
   position: absolute;
   top: 10px;
-  right: 20px;
+  right: 10px;
   font-size: 30px;
   line-height: 50px;
 }
@@ -868,7 +862,6 @@ template {
   text-transform: uppercase;
   letter-spacing: -0.28px;
   margin-top: 10px;
-  margin-left: 10px;
   padding: 10px 0px;
 }
 
@@ -876,7 +869,6 @@ template {
   position: relative;
   font-size: 14px;
   color: #56819F;
-  margin-left: 10px;
   padding: 10px 0px;
 }
 
@@ -919,6 +911,12 @@ template {
   display: inline-block;
 }
 
+@media (max-width: 767px) {
+  .topbar {
+    display: none;
+  }
+}
+
 .general-statistic {
   border: 1px solid #E3E3E3;
   background-color: #ffffff;
@@ -926,6 +924,11 @@ template {
           box-shadow: 2px 2px 2px #979797;
   margin: 50px 10px;
   padding: 15px;
+}
+
+.calendar {
+  width: 100%;
+  text-align: center;
 }
 
 .calendar p {
@@ -947,6 +950,12 @@ template {
   margin-top: 30px;
   width: auto;
   min-width: 100%;
+}
+
+@media (max-width: 767px) {
+  .calendar {
+    text-align: center;
+  }
 }
 
 .links {
@@ -977,6 +986,7 @@ a:hover {
 
 .section-header {
   border-bottom: 1px solid #E3E3E3;
+  width: 100%;
 }
 
 .section-header .section-title {
@@ -1001,6 +1011,9 @@ a:hover {
 @media (max-width: 767px) {
   a {
     font-size: 16px;
+  }
+  .section-title {
+    text-align: center;
   }
 }
 /*# sourceMappingURL=style.css.map */
