--- a/css/style.prefixed.css
+++ b/css/style.prefixed.css
@@ -359,6 +359,7 @@ template {
   width: 100%;
   padding-left: 15px;
   padding-right: 15px;
+  text-align: center;
 }
 
 .row::before,
@@ -799,10 +800,6 @@ template {
 }
 
 @media (max-width: 767px) {
-  .table-row {
-    -ms-flex-direction: column;
-    flex-direction: column;
-  }
   .table-item {
     text-align: center;
   }
@@ -828,14 +825,13 @@ template {
   font-size: 30px;
   font-family: 'Dancing Script', cursive;
   line-height: 50px;
-  margin-left: 10px;
   padding: 10px 0px;
 }
 
 .navbar .navbar-menu i {
   position: absolute;
   top: 10px;
-  right: 20px;
+  right: 10px;
   font-size: 30px;
   line-height: 50px;
 }
@@ -854,7 +850,6 @@ template {
   text-transform: uppercase;
   letter-spacing: -0.28px;
   margin-top: 10px;
-  margin-left: 10px;
   padding: 10px 0px;
 }
 
@@ -862,7 +857,6 @@ template {
   position: relative;
   font-size: 14px;
   color: #56819F;
-  margin-left: 10px;
   padding: 10px 0px;
 }
 
@@ -905,12 +899,23 @@ template {
   display: inline-block;
 }
 
+@media (max-width: 767px) {
+  .topbar {
+    display: none;
+  }
+}
+
 .general-statistic {
   border: 1px solid #E3E3E3;
   background-color: #ffffff;
   box-shadow: 2px 2px 2px #979797;
   margin: 50px 10px;
   padding: 15px;
+}
+
+.calendar {
+  width: 100%;
+  text-align: center;
 }
 
 .calendar p {
@@ -932,6 +937,12 @@ template {
   margin-top: 30px;
   width: auto;
   min-width: 100%;
+}
+
+@media (max-width: 767px) {
+  .calendar {
+    text-align: center;
+  }
 }
 
 .links {
@@ -961,6 +972,7 @@ a:hover {
 
 .section-header {
   border-bottom: 1px solid #E3E3E3;
+  width: 100%;
 }
 
 .section-header .section-title {
@@ -985,6 +997,9 @@ a:hover {
 @media (max-width: 767px) {
   a {
     font-size: 16px;
+  }
+  .section-title {
+    text-align: center;
   }
 }
 /*# sourceMappingURL=style.prefixed.css.map */
