--- a/sass/components/_tables.scss
+++ b/sass/components/_tables.scss
@@ -39,9 +39,9 @@
 }
 
 @media (max-width: 767px) {
-    .table-row {
-        flex-direction: column;
-    }
+    // .table-row {
+    //     flex-direction: column;
+    // }
 
     .table-item {
         text-align: center;
