--- a/sass/sections/_general_statistic.scss
+++ b/sass/sections/_general_statistic.scss
@@ -3,10 +3,14 @@
 }
 
 .calendar {
+    width: 100%;
+    text-align: center;
+
     p {
         display: inline-block;
         border: 1px solid $border;
         padding: 10px 30px 10px 10px;
+
     }
 }
 
@@ -22,5 +26,11 @@
         margin-top: 30px;
         width: auto;
         min-width: 100%;
+    }
+}
+
+@media (max-width:767px) {
+    .calendar {
+        text-align: center;
     }
 }
