--- a/css/style.css
+++ b/css/style.css
@@ -686,7 +686,7 @@ template {
   font-weight: 300;
   border: none;
   cursor: pointer;
-  margin-top: 30px;
+  margin-top: 15px;
 }
 
 .btn-primary {
@@ -734,6 +734,10 @@ template {
 .list-group-item {
   list-style-type: none;
   padding: 5px;
+}
+
+.list-group-horizontal {
+  float: right;
 }
 
 .list-group-horizontal .list-group-item {
@@ -810,6 +814,12 @@ template {
 }
 
 @media (max-width: 767px) {
+  .links .table-row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
   .table-item {
     text-align: center;
   }
@@ -887,16 +897,22 @@ template {
 
 @media (max-width: 767px) {
   .navbar {
-    height: 100vh;
-    left: -150px;
+    position: absolute;
+    left: -130px;
   }
-  .hide {
-    left: 150px;
+  .navbar.hide {
+    right: 480px;
   }
   .navbar-menu i {
     position: absolute;
     top: 0px;
-    right: 0px;
+    left: 160px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 992px) {
+  .navbar h3 {
+    font-size: 20px;
   }
 }
 
@@ -956,6 +972,15 @@ template {
   .calendar {
     text-align: center;
   }
+  .calendar p {
+    padding: 5px;
+  }
+}
+
+@media (max-width: 767px) {
+  .general-statistic {
+    margin: 5px 10px;
+  }
 }
 
 .links {
@@ -965,6 +990,12 @@ template {
           box-shadow: 2px 2px 2px #979797;
   margin: 50px 10px;
   padding: 15px;
+}
+
+@media (max-width: 767px) {
+  .links {
+    margin: 5px 10px;
+  }
 }
 
 body {
