--- a/sass/sections/_navbar.scss
+++ b/sass/sections/_navbar.scss
@@ -71,17 +71,25 @@
 
 @media (max-width: 767px) {
     .navbar {
-        height: 100vh;
-        left: -150px;
-    }
+        position: absolute;
+        left: -130px;
 
-    &.hide {
-        left: 150px;
+        &.hide {
+            right: 480px;
+        }
     }
 
     .navbar-menu i {
         position: absolute;
         top: 0px;
-        right: 0px;
+        left: 160px;
+    }
+}
+
+@media (min-width:768px) and (max-width:992px) {
+    .navbar {
+        h3 {
+            font-size: 20px;
+        }
     }
 }
