--- a/sass/components/_list_group.scss
+++ b/sass/components/_list_group.scss
@@ -25,3 +25,9 @@
         }
     }
 }
+
+@media (min-width: 768px) and (max-width:992px) {
+    .list-group-item {
+        text-align: center;
+    }
+}
