--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,6 +6,7 @@
 @import "components/icons";
 @import "components/list_group";
 @import "components/tables";
+@import "components/form_field";
 @import "sections/navbar";
 @import "sections/topbar";
 @import "sections/general_statistic";
