--- a/css/style.prefixed.css
+++ b/css/style.prefixed.css
@@ -819,6 +819,33 @@ template {
   }
 }
 
+form {
+  padding: 10px;
+  border-bottom: 1px solid #E3E3E3;
+}
+
+form .field {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+  padding: 10px;
+}
+
+form .field label {
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  color: #979797;
+  width: 100px;
+  margin-right: 30px;
+}
+
+input {
+  padding: 5px 10px;
+  font-size: 16px;
+}
+
 .navbar {
   position: fixed;
   top: 0;
@@ -831,7 +858,7 @@ template {
 }
 
 .navbar.hide {
-  left: -200px;
+  left: -250px;
 }
 
 .navbar h3 {
@@ -898,6 +925,11 @@ template {
   }
   .navbar.hide .icon {
     display: none;
+  }
+  .navbar.hide .navbar-menu i {
+    position: absolute;
+    top: 10px;
+    left: 180px;
   }
   .navbar-menu i {
     position: absolute;
