--- a/css/style.css
+++ b/css/style.css
@@ -832,7 +832,7 @@ template {
 }
 
 form {
-  padding: 10px;
+  padding: 20px 10px;
   border-bottom: 1px solid #E3E3E3;
 }
 
@@ -843,21 +843,29 @@ form .field {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 10px;
 }
 
 form .field label {
-  font-size: 16px;
+  font-size: 14px;
   font-family: "Roboto", sans-serif;
   font-weight: bold;
   color: #979797;
-  width: 100px;
-  margin-right: 30px;
+  width: 120px;
+  margin-right: 10px;
 }
 
 input {
   padding: 5px 10px;
-  font-size: 16px;
+  font-size: 14px;
+}
+
+input:focus {
+  outline: none;
+  border: 2px solid #F58220;
 }
 
 .navbar {
