--- a/sass/components/_form_field.scss
+++ b/sass/components/_form_field.scss
@@ -1,24 +1,30 @@
 form {
-    padding: 10px;
+    padding: 20px 10px;
     border-bottom: 1px solid $border;
 
     .field {
         display: flex;
         justify-content: center;
+        align-items: center;
         padding: 10px;
 
         label {
-            font-size: $medium-font-size;
+            font-size: $small-font-size;
             font-family: $brand-font;
             font-weight: bold;
             color: $brand-main-color;
-            width: 100px;
-            margin-right: 30px;
+            width: 120px;
+            margin-right: 10px;
         }
     }
 }
 
 input {
     padding: 5px 10px;
-    font-size: $medium-font-size;
+    font-size: $small-font-size;
+
+    &:focus {
+        outline: none;
+        border: 2px solid $btn-primary;
+    }
 }
