--- a/css/style.css
+++ b/css/style.css
@@ -788,6 +788,7 @@ template {
 
 .table .table-row:hover {
   background-color: #f1f3f3;
+  cursor: pointer;
 }
 
 .table .table-row:hover .icon-table-hover {
@@ -836,7 +837,7 @@ form {
   border-bottom: 1px solid #E3E3E3;
 }
 
-form .field {
+.field {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -849,7 +850,7 @@ form .field {
   padding: 10px;
 }
 
-form .field label {
+label {
   font-size: 14px;
   font-family: "Roboto", sans-serif;
   font-weight: bold;
@@ -858,14 +859,40 @@ form .field label {
   margin-right: 10px;
 }
 
+textarea {
+  resize: none;
+  border: 1px solid #E3E3E3;
+  color: #979797;
+  font-size: 14px;
+  width: 100%;
+  height: 150px;
+}
+
 input {
   padding: 5px 10px;
   font-size: 14px;
+  border: 1px solid #E3E3E3;
 }
 
 input:focus {
   outline: none;
   border: 2px solid #F58220;
+}
+
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border: 1px solid #E3E3E3;
+  padding: 5px 30px 5px 10px;
+  font-size: 14px;
+  display: block;
+  width: 200px;
+  border-radius: 0;
+  background-image: url(https://image.flaticon.com/icons/png/128/118/118738.png);
+  background-size: 15px auto;
+  background-repeat: no-repeat;
+  background-position: right 5px center;
 }
 
 .navbar {
@@ -875,6 +902,7 @@ input:focus {
   z-index: 1;
   background-color: #191919;
   height: 100vh;
+  width: 300px;
   float: left;
   -webkit-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
@@ -942,6 +970,7 @@ input:focus {
   .navbar {
     position: absolute;
     left: -250px;
+    width: 70vw;
   }
   .navbar.hide {
     left: 0px;
