--- a/css/style.prefixed.css
+++ b/css/style.prefixed.css
@@ -780,6 +780,7 @@ template {
 
 .table .table-row:hover {
   background-color: #f1f3f3;
+  cursor: pointer;
 }
 
 .table .table-row:hover .icon-table-hover {
@@ -824,7 +825,7 @@ form {
   border-bottom: 1px solid #E3E3E3;
 }
 
-form .field {
+.field {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: center;
@@ -834,7 +835,7 @@ form .field {
   padding: 10px;
 }
 
-form .field label {
+label {
   font-size: 14px;
   font-family: "Roboto", sans-serif;
   font-weight: bold;
@@ -843,14 +844,40 @@ form .field label {
   margin-right: 10px;
 }
 
+textarea {
+  resize: none;
+  border: 1px solid #E3E3E3;
+  color: #979797;
+  font-size: 14px;
+  width: 100%;
+  height: 150px;
+}
+
 input {
   padding: 5px 10px;
   font-size: 14px;
+  border: 1px solid #E3E3E3;
 }
 
 input:focus {
   outline: none;
   border: 2px solid #F58220;
+}
+
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border: 1px solid #E3E3E3;
+  padding: 5px 30px 5px 10px;
+  font-size: 14px;
+  display: block;
+  width: 200px;
+  border-radius: 0;
+  background-image: url(https://image.flaticon.com/icons/png/128/118/118738.png);
+  background-size: 15px auto;
+  background-repeat: no-repeat;
+  background-position: right 5px center;
 }
 
 .navbar {
@@ -860,6 +887,7 @@ input:focus {
   z-index: 1;
   background-color: #191919;
   height: 100vh;
+  width: 300px;
   float: left;
   transition: all .3s ease-in-out;
 }
@@ -925,6 +953,7 @@ input:focus {
   .navbar {
     position: absolute;
     left: -250px;
+    width: 70vw;
   }
   .navbar.hide {
     left: 0px;
