--- a/sass/components/_form_field.scss
+++ b/sass/components/_form_field.scss
@@ -1,30 +1,59 @@
 form {
     padding: 20px 10px;
     border-bottom: 1px solid $border;
+}
 
-    .field {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 10px;
+.field {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
 
-        label {
-            font-size: $small-font-size;
-            font-family: $brand-font;
-            font-weight: bold;
-            color: $brand-main-color;
-            width: 120px;
-            margin-right: 10px;
-        }
-    }
+label {
+    // display: block;
+    font-size: $small-font-size;
+    font-family: $brand-font;
+    font-weight: bold;
+    color: $brand-main-color;
+    width: 120px;
+    margin-right: 10px;
+}
+
+textarea {
+    resize: none;
+    border: 1px solid $border;
+    color: $brand-main-color;
+    font-size: $small-font-size;
+    width: 100%;
+    height: 150px;
 }
 
 input {
     padding: 5px 10px;
     font-size: $small-font-size;
+    border: 1px solid $border;
 
     &:focus {
         outline: none;
         border: 2px solid $btn-primary;
     }
+}
+
+input[type="range"] {}
+
+select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border: 1px solid $border;
+    padding: 5px 30px 5px 10px;
+    font-size: $small-font-size;
+    display: block;
+    width: 200px;
+    border-radius: 0;
+    background-image: url(https://image.flaticon.com/icons/png/128/118/118738.png);
+    background-size: 15px auto;
+    background-repeat: no-repeat;
+    background-position: right 5px center;
 }
