--- a/sass/components/_tables.scss
+++ b/sass/components/_tables.scss
@@ -11,6 +11,7 @@
 
         &:hover {
             background-color: $table-hover;
+            cursor: pointer;
 
             .icon-table-hover {
                 display: inline-block;
