--- a/sass/sections/_navbar.scss
+++ b/sass/sections/_navbar.scss
@@ -5,6 +5,7 @@
     z-index: 1;
     background-color: $bgcolor-navbar;
     height: 100vh;
+    width: 300px;
     float: left;
     transition: all .3s ease-in-out;
 
@@ -73,6 +74,7 @@
     .navbar {
         position: absolute;
         left: -250px;
+        width: 70vw;
 
         &.hide {
             left: 0px;
