--- a/sass/sections/_general_statistic.scss
+++ b/sass/sections/_general_statistic.scss
@@ -10,7 +10,7 @@
         display: inline-block;
         border: 1px solid $border;
         padding: 10px 30px 10px 10px;
-
+        margin: -3px;
     }
 }
 
