--- a/sass/components/_tables.scss
+++ b/sass/components/_tables.scss
@@ -3,7 +3,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin-top: 15px;
+    margin: 30px 0px;
 
     .table-row {
         display: flex;
