--- a/sass/components/_form_field.scss
+++ b/sass/components/_form_field.scss
@@ -1,5 +1,5 @@
 form {
-    padding: 20px 10px;
+    padding: 20px 0px;
     border-bottom: 1px solid $border;
     width: 100%;
 }
@@ -8,11 +8,15 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
-
 }
 
 .form-inline {
-    display: inline-block;
+    width: 100%;
+}
+
+.form-checkbox {
+    border-right: 1px solid $border;
+    overflow-y: scroll;
 }
 
 .field {
@@ -27,8 +31,28 @@ label {
     font-family: $brand-font;
     font-weight: bold;
     color: $brand-main-color;
-    width: 120px;
+    width: 130px;
     margin-right: 10px;
+    padding-bottom: 10px;
+
+    input[type="checkbox"] {
+        position: absolute;
+        margin: 0;
+        width: 14px;
+        height: 14px;
+        opacity: 0;
+
+        +.icon {
+            display: inline-block;
+            width: 14px;
+            height: 14px;
+            border: 1px solid $border;
+        }
+
+        &:checked+.icon {
+            background-color: $primary;
+        }
+    }
 }
 
 textarea {
@@ -37,7 +61,7 @@ textarea {
     color: $brand-main-color;
     font-size: $small-font-size;
     width: 100%;
-    height: 150px;
+    height: 200px;
 }
 
 input {
@@ -51,6 +75,12 @@ input {
     }
 }
 
+input[type="range"] {
+    height: 188px;
+    width: 100%;
+
+}
+
 
 select {
     -webkit-appearance: none;
@@ -60,10 +90,15 @@ select {
     padding: 5px 30px 5px 10px;
     font-size: $small-font-size;
     display: block;
-    width: 200px;
+    width: 100%;
     border-radius: 0;
-    background-image: url(https://image.flaticon.com/icons/png/128/118/118738.png);
+    background-image: url('https://image.flaticon.com/icons/png/128/118/118738.png');
     background-size: 15px auto;
     background-repeat: no-repeat;
     background-position: right 5px center;
+}
+
+.label-statuses {
+    text-transform: uppercase;
+    color: #EA2027;
 }
