--- a/sass/sections/_general_statistic.scss
+++ b/sass/sections/_general_statistic.scss
@@ -11,6 +11,7 @@
         border: 1px solid $border;
         padding: 10px 30px 10px 10px;
         margin: -3px;
+        font-family: $paragraph-font;
     }
 }
 
