--- a/sass/components/_list_group.scss
+++ b/sass/components/_list_group.scss
@@ -1,7 +1,6 @@
 .list-group-item {
     list-style-type: none;
     padding: 5px;
-
 }
 
 .list-group-horizontal {
@@ -40,5 +39,16 @@
         &:hover {
             background-color: $primary;
         }
+    }
+}
+
+@media (max-width:767px) {
+    .list-group {
+        margin-top: 10px;
+    }
+
+    .list-group-item {
+        text-align: center;
+        font-size: $large-font-size;
     }
 }
