--- a/sass/components/_tables.scss
+++ b/sass/components/_tables.scss
@@ -22,12 +22,11 @@
     .table-item {
         justify-content: space-around;
         flex-grow: 0;
-        flex-shrink: 1;
         flex-basis: 100%;
         width: 100%;
         box-sizing: border-box;
         border-bottom: 1px solid $border;
-        padding: 10px;
+        padding: 10px 5px;
         font-size: $medium-font-size;
         font-family: $brand-font;
         color: $brand-main-color;
@@ -43,6 +42,12 @@
     .links {
         .table-row {
             flex-direction: column;
+        }
+    }
+
+    .general-statistic {
+        .table-row {
+            flex-direction: row;
         }
     }
 
