--- a/sass/sections/_navbar.scss
+++ b/sass/sections/_navbar.scss
@@ -5,12 +5,12 @@
     z-index: 1;
     background-color: $bgcolor-navbar;
     height: 100vh;
-    width: 300px;
+    width: 15vw;
     float: left;
     transition: all .3s ease-in-out;
 
     &.hide {
-        left: -250px;
+        left: -150px;
     }
 
     h3 {
@@ -83,14 +83,29 @@
             .navbar-menu i {
                 position: absolute;
                 top: 10px;
-                left: 180px;
+                left: 150px;
             }
+        }
+
+        h3 {
+            display: none;
+        }
+
+        .icon {
+            display: none;
         }
     }
 
     .navbar-menu i {
-        position: absolute;
+        position: relative;
         top: 0px;
         left: 550px;
+    }
+}
+
+@media (min-width:768px) and (max-width:992px) {
+    .navbar {
+        height: 100vh;
+        width: 20vw;
     }
 }
