--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,6 +7,7 @@
 @import "components/list_group";
 @import "components/tables";
 @import "components/form_field";
+@import "components/modal";
 @import "sections/navbar";
 @import "sections/topbar";
 @import "sections/general_statistic";
