--- a/sass/components/_form_field.scss
+++ b/sass/components/_form_field.scss
@@ -101,6 +101,21 @@ input[type="range"]::-webkit-slider-thumb {
     border-bottom: 25px solid $btn-primary;
 }
 
+input[type="range"]::-moz-range-thumb {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    position: relative;
+    top: 15px;
+    width: 0px;
+    height: 0px;
+    background-color: transparent;
+    border-radius: 0;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    border-bottom: 25px solid $btn-primary;
+}
+
 textarea {
     resize: none;
     border: 1px solid $border;
