--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -1,12 +1,13 @@
 @mixin margin {
     padding: 10px 0px;
+    margin-right: 20px;
 }
 
 @mixin section_style {
     border: 1px solid $border;
     background-color: $bgcolor-section;
     box-shadow: 2px 2px 2px $brand-main-color;
-    margin: 50px 10px;
+    margin: 50px 5px;
     padding: 15px;
 }
 
